=== 1.8.1 / 2010-02-18

* Add Flame stabilizer export support

=== 1.7.5 / 2010-02-17

* Use a special IO so that we can display progress when parsing/reading a file (based on the IO offset)

=== 1.7.4 / 2010-02-02

* Introduce an intentional gap in the reference exports to test trackers with gaps
* Export Syntheyes paths as normal frames, not as keyframes. This produces better solves by not overconstraining the solver
	(Without this TransitionFrms, a crucial parameter in SY, seizes to work)
* Add a LengthCutoff middleware that allows you to remove trackers that have less than X keyframes in them from the export

=== 1.7.3 / 2010-02-02

* Fixed the --only option in the commandline binary

=== 1.7.2 / 2010-01-31

* Add a Lerp middleware that linearly interpolates missing keyframes (USE CAREFULLY!)
* Prevent the Shake lexer from walking into the woods on files that are certainly wrong
* Export proper project length with Nuke scripts
* Ensure preamble for Nuke exports does not get overriden in width/height

=== 1.7.1 / 2010-01-24

* Fix Ruby 1.9 compatibility

=== 1.7.0 / 2010-01-24

* Fix edge cases of specific comp sizes outputting incorrect exports for Equalizer 3 and MatchMover

=== 1.6.9 / 2010-01-20

* Make the commandline progress reports shorter

=== 1.6.8 / 2010-01-13

* Fix frame gap handling for repeating gaps in the Nuke importer

=== 1.6.7 / 2010-01-13

* Fix frame gap sizes in the Nuke exporter (thanks Michael Lester)

=== 1.6.6 / 2009-12-07

* Handle Hermite cuves in Shake scripts

=== 1.6.5 / 2009-11-27

* Adds the --only option for the tracksperanto binary to only export a specific format
* Automatically unlink tempfiles in the Equalizer4 exporter

=== 1.6.4 / 2009-11-25

* Adds Boujou 2d feature import support (to export for Boujou use the Shake text format)

=== 1.6.3 / 2009-11-25

* Fixes the Shake importer so that it doesn't apply correlation curves if they are not present or constantized to 1

=== 1.6.2 / 2009-11-15
